* Fri May 20 2022 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.3.1
- Ensure that the module does not manage files if the package is being removed

* Thu Jun 17 2021 Chris Tessmer <chris.tessmer@onyxpoint.com> - 4.3.0
- Removed support for Puppet 5
- Ensured support for Puppet 7 in requirements and stdlib

* Sat Dec 19 2020 Chris Tessmer <chris.tessmer@onyxpoint.com> - 4.2.2
- Removed EL6 support

* Mon Feb 24 2020 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.2.1-0
- Add support for EL8
- Update README.md
- Add REFERENCE.md
- Added acceptance tests
- Removed `TRAFFIC` from the default `log_on_success` list since it may cause
  information leakage and is not supported by all service types.

* Fri Aug 02 2019 Robert Vincent <pillarsdotnet@gmail.com> - 4.2.1-0
- Support puppetlabs/stdlib 6.x.

* Mon Jun 03 2019 Steven Pritchard <steven.pritchard@onyxpoint.com> - 4.2.0-0
- Add v2 compliance_markup data
- Add compliance engine unit tests

* Thu Mar 07 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.1.1-0
- Allow users to purge unmanaged xinetd services
- Add support for Puppet 6

* Tue Feb 12 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 4.1.1-0
- Fixed bug in which the xinetd::disabled parameter would only
  be included in xinetd.conf if the xinetd::no_access parameter
  was not empty.
- Use Simplib::Umask data type in lieu of validate_umask(),
  a deprecated simplib Puppet 3 function.
- Use simplib::validate_net_list() in lieu of validate_net_list(),
  a deprecated simplib Puppet 3 function.
- Use simplib::nets2cidr() in lieu of nets2cidr(),
  a deprecated simplib Puppet 3 function.
- Expanded the upper limits of the stdlib Puppet module version

* Fri Aug 24 2018 Nick Miller <nick.miller@onyxpoint.com> - 4.1.0-0
- Add support for Puppet 5 and OEL
- Added $package_ensure parameter
  - Changed the package from 'latest' to 'installed'
  - It will also respect `simp_options::package_ensure`

* Fri Jun 16 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 4.0.2-0